[gd_scene load_steps=8 format=3 uid="uid://cn8ftl83ro5c"]

[ext_resource type="Script" uid="uid://ba5xd1jxpa2sg" path="res://main_menu.gd" id="1_7vrkn"]
[ext_resource type="AudioStream" uid="uid://de1qcqmhj4jpp" path="res://Sound/Music/underwater attack revised.mp3" id="2_fu7sn"]
[ext_resource type="Texture2D" uid="uid://ci2lb6kgybe6y" path="res://Textures/PoolTile.png" id="2_glbon"]
[ext_resource type="Texture2D" uid="uid://dnssd4qvxhjul" path="res://Textures/SplashdownLogo.png" id="2_jix8l"]
[ext_resource type="Texture2D" uid="uid://b2k44i386ty2i" path="res://Textures/AphelionEnt-Logo.png" id="3_jix8l"]

[sub_resource type="LabelSettings" id="LabelSettings_glbon"]

[sub_resource type="LabelSettings" id="LabelSettings_nlkkf"]
font_size = 12

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7vrkn")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_glbon")
stretch_mode = 1

[node name="Label" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = -140.0
offset_right = 7.0
offset_bottom = -117.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.52, 1.52)
text = "SPLASHDOWN"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LogoSprite" type="Sprite2D" parent="."]
position = Vector2(960, 568)
scale = Vector2(1.56, 1.56)
texture = ExtResource("2_jix8l")

[node name="AphelionEnt-logo" type="Sprite2D" parent="."]
visible = false
position = Vector2(216, 872)
scale = Vector2(0.160001, 0.160001)
texture = ExtResource("3_jix8l")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -65.0
offset_right = 100.0
offset_bottom = 65.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Start Game"

[node name="ControlsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Controls"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Options"

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Credits"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Quit Game"

[node name="ControlsScreen" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Panel2" type="Panel" parent="ControlsScreen"]
layout_mode = 0
offset_left = -576.0
offset_top = -324.0
offset_right = -64.0
offset_bottom = -4.0
scale = Vector2(2.28, 2.08)

[node name="ControlsLabel" type="Label" parent="ControlsScreen/Panel2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -91.0877
offset_top = -63.8462
offset_right = 208.912
offset_bottom = 63.1538
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.576923, 0.576923)
text = "Controls: 
Swim - WASD / Left Stick
Aim - Mouse / Right Stick
Fire - Left Mouse Button / Right Trigger
Refill - Hold R / RB"
vertical_alignment = 1

[node name="BackButton" type="Button" parent="ControlsScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = 52.0
offset_right = 21.0
offset_bottom = 83.0
grow_horizontal = 2
grow_vertical = 2
text = "Back"

[node name="OptionsScreen" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Panel3" type="Panel" parent="OptionsScreen"]
layout_mode = 0
offset_left = -576.0
offset_top = -324.0
offset_right = -64.0
offset_bottom = -4.0
scale = Vector2(2.28, 2.08)

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsScreen/Panel3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = -79.0
offset_right = 137.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2

[node name="OptionsLabel" type="Label" parent="OptionsScreen/Panel3/VBoxContainer"]
layout_mode = 2
text = "Options"
label_settings = SubResource("LabelSettings_glbon")
vertical_alignment = 1

[node name="VolumeLabel" type="Label" parent="OptionsScreen/Panel3/VBoxContainer"]
layout_mode = 2
text = "Volume"
label_settings = SubResource("LabelSettings_nlkkf")
vertical_alignment = 1

[node name="VolumeSlider" type="HSlider" parent="OptionsScreen/Panel3/VBoxContainer"]
layout_mode = 2
value = 80.0
rounded = true

[node name="ResLabel" type="Label" parent="OptionsScreen/Panel3/VBoxContainer"]
layout_mode = 2
text = "Resolution"
label_settings = SubResource("LabelSettings_nlkkf")
vertical_alignment = 1

[node name="ResolutionOption" type="OptionButton" parent="OptionsScreen/Panel3/VBoxContainer"]
layout_mode = 2
selected = 2
item_count = 5
popup/item_0/text = "1280x720"
popup/item_0/id = 0
popup/item_1/text = "1600x900"
popup/item_1/id = 1
popup/item_2/text = "1920x1080"
popup/item_2/id = 2
popup/item_3/text = "2560x1440"
popup/item_3/id = 3
popup/item_4/text = "3840x2160"
popup/item_4/id = 4

[node name="OptionsBackButton" type="Button" parent="OptionsScreen/Panel3/VBoxContainer"]
layout_mode = 2
text = "Back"

[node name="CreditsScreen" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="CreditsScreen"]
layout_mode = 0
offset_left = -576.0
offset_top = -324.0
offset_right = -64.0
offset_bottom = -4.0
scale = Vector2(2.28, 2.08)

[node name="CreditsLabel" type="Label" parent="CreditsScreen/Panel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 157.895
offset_top = -83.0769
offset_right = 465.895
offset_bottom = 43.9231
grow_vertical = 2
scale = Vector2(0.576923, 0.576923)
text = "Aphelion Entertainment

Programming: Caleb Badick, Sara Affara
Art and Design: Scyghost, Rift
Music and Sound: 2tea, Clem"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CreditsBackButton" type="Button" parent="CreditsScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = 52.0
offset_right = 5.0
offset_bottom = 83.0
grow_horizontal = 2
grow_vertical = 2
text = "Back"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-24, 24)
stream = ExtResource("2_fu7sn")
autoplay = true

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ControlsButton" to="." method="_on_controls_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="ControlsScreen/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="value_changed" from="OptionsScreen/Panel3/VBoxContainer/VolumeSlider" to="." method="_on_volume_slider_value_changed"]
[connection signal="item_selected" from="OptionsScreen/Panel3/VBoxContainer/ResolutionOption" to="." method="_on_resoption_item_selected"]
[connection signal="pressed" from="OptionsScreen/Panel3/VBoxContainer/OptionsBackButton" to="." method="_on_optback_button_pressed"]
[connection signal="pressed" from="CreditsScreen/CreditsBackButton" to="." method="_on_credback_button_pressed"]
